add contact and nav

--- a/milestone-portfolio-project/css/main.css
+++ b/milestone-portfolio-project/css/main.css
@@ -11,6 +11,24 @@ body	{
 
 .header-section {
 
+  font-family: ;
+  margin: ;
+  font-size: ;
+  font-weight: normal;
+  line-height: ;
+  margin: ;
+  padding: ;
+  text-align: ;
+  clear: all;
+
+
+}
+
+
+/***** INTRO *****/
+
+.intro-section	{
+
 }
 
 
