--- a/css/main.css
+++ b/css/main.css
@@ -3,7 +3,6 @@
 body	{
 	font-family: 'Abel', sans-serif;
 	background-color: #004d66;
-
 }
 
 
@@ -11,14 +10,14 @@ body	{
 
 .header {
 
-	background-color:
-  	margin: ;
-  	font-size: ;
+	background-color: #004d66;
+  	margin: 30px;
+  	font-size: 30px;
   	font-weight: normal;
   	line-height: ;
   	margin: ;
   	padding: ;
-  	text-align: ;
+  	text-align: center;
   	clear: all;
 
 
@@ -29,14 +28,14 @@ body	{
 
 .intro	{
 
-	background-color:
-  	margin: ;
-  	font-size: ;
-  	font-weight: normal;
-  	line-height: ;
-  	margin: ;
-  	padding: ;
-  	text-align: ;
+	background-color: #004d66;
+  	margin: 30px;
+  	font-size: 60px;
+  	color: #ffffff;
+  	line-height: all;
+  	margin: 30px;
+  	padding: 30px;
+  	text-align: center;
   	clear: all;
 
 
@@ -46,12 +45,12 @@ body	{
 #nav	{
     float: right; 
     padding: ;
-    display: inline-block;
+    color: #ffffff;
     text-transform: uppercase;
     text-decoration: none;
-    font-size: ;
-    color: ;
-    padding-left: ; 
+    font-size: 30px;
+    color: #ffffff;
+    padding: ; 
 
 }
 
@@ -61,13 +60,12 @@ body	{
 
 .about	{
 
-	background-color:
-  	margin: ;
-  	font-size: ;
+	background-color: #004d66;
+  	margin-left: 30px ;
+  	font-size: 30px;
   	font-weight: normal;
   	line-height: ;
-  	margin: ;
-  	padding: ;
+  	color: #ffffff;
   	text-align: ;
   	clear: all;
 
@@ -81,16 +79,17 @@ body	{
 
 .portfolio {
 
-	background-color:
-  	margin: ;
-  	font-size: ;
+	background-color: #ffffff;
   	font-weight: normal;
   	line-height: ;
-  	margin: ;
-  	padding: ;
-  	text-align: ;
+  	padding: 30px;
+  	text-align: center;
   	clear: all;
 
+}
+
+.third-width	{
+	margin: 50px 50px 50px 50px;
 }
 
 
@@ -98,14 +97,21 @@ body	{
 
 .contact {
 
-	background-color:
+	background-color: #004d66;
   	margin: ;
   	font-size: ;
   	font-weight: normal;
   	line-height: ;
   	margin: ;
   	padding: ;
-  	text-align: ;
+  	text-align: center;
   	clear: all;
+
+}
+
+/***** FOOTER *****/
+
+.footer {
+	text-align: center;
 
 }
