--- a/css/main.css
+++ b/css/main.css
@@ -2,7 +2,7 @@
 
 body	{
 	font-family: 'Abel', sans-serif;
-	background-color: #004d66;
+	background-color: #122336;
 }
 
 
@@ -10,7 +10,7 @@ body	{
 
 .header {
 
-	background-color: #004d66;
+	background-color: #122336;
   	margin: 30px;
   	font-size: 30px;
   	font-weight: normal;
@@ -28,7 +28,7 @@ body	{
 
 .intro	{
 
-	background-color: #004d66;
+	background-color: #122336;
   	margin: 30px;
   	font-size: 60px;
   	color: #ffffff;
@@ -42,15 +42,13 @@ body	{
 }
 
 
-#nav	{
-    float: right; 
-    padding: ;
+#nav	{  
+	float: left;
     color: #ffffff;
     text-transform: uppercase;
     text-decoration: none;
     font-size: 30px;
     color: #ffffff;
-    padding: ; 
 
 }
 
@@ -60,13 +58,11 @@ body	{
 
 .about	{
 
-	background-color: #004d66;
-  	margin-left: 30px ;
+	background-color: #ffffff;
   	font-size: 30px;
   	font-weight: normal;
-  	line-height: ;
-  	color: #ffffff;
-  	text-align: ;
+  	text color: #122336;
+  	text-align: center ;
   	clear: all;
 
 }
@@ -74,30 +70,25 @@ body	{
 
 
 
-/***** WORK *****/
+/***** PORTFOLIO *****/
 
 
 .portfolio {
 
 	background-color: #ffffff;
-  	font-weight: normal;
-  	line-height: ;
-  	padding: 30px;
+  	color: #122336;
   	text-align: center;
   	clear: all;
 
 }
 
-.third-width	{
-	margin: 50px 50px 50px 50px;
-}
 
 
 /***** CONTACT *****/
 
 .contact {
 
-	background-color: #004d66;
+	background-color: #122336;
   	margin: ;
   	font-size: ;
   	font-weight: normal;
@@ -113,5 +104,6 @@ body	{
 
 .footer {
 	text-align: center;
+	color: #ffffff;
 
 }
