--- a/css/main.css
+++ b/css/main.css
@@ -14,33 +14,37 @@ body	{
   	font-weight: normal;
   	text-align: center;
   	clear: all;
+  }
 
-
+nav {
+    text-align: center;
 }
 
-#nav  {  
-    text-align: center;
+nav ul li{
+    display: inline-block;
+    padding: 50px 25px;
+    margin: 100px;
+}
+
+nav ul li a {
+    font-size: 30px;
     color: #ffffff;
     text-decoration: none;
-    font-size: 30px;
 }
 
 
 /***** INTRO *****/
 
-.intro	{
-  	margin: 30px;
-  	font-size: 60px;
-  	color: #ffffff;
-  	line-height: all;
-  	margin: 30px;
-  	padding: 30px;
-  	text-align: center;
-  	clear: all;
-
-
+.intro  {
+    margin: 30px;
+    font-size: 60px;
+    color: #ffffff;
+    line-height: all;
+    margin: 30px;
+    padding: 30px;
+    text-align: center;
+    clear: all;
 }
-
 
 /***** ABOUT *****/
 
@@ -60,6 +64,13 @@ body	{
 
 
 /***** PORTFOLIO *****/
+
+.work {
+  margin-top: 150px;
+  color: #ffffff;
+  font-size: 30px;
+  text-align: center;
+}
 
 .distracted h3, p	{
 	color: #ffffff;
@@ -81,19 +92,16 @@ body	{
 
 .jubilee img {
   width: 500px;
-  padding-left: 700px;
   margin: 0 auto;
 }
 
 .distracted img {
   width: 500px;
-  padding-left: 700px;
   margin: 0 auto;
 }
 
 .rogue img {
   width: 500px;
-  padding-left: 700px;
   margin: 0 auto;
 }
 
